# PhaseShiftGrayCode

./: CMakeLists.txt  CalPhase.cpp  CalPhase.h  CameraCalib.cpp  CameraCalib.h  Phase_Shift.kdev4  Propointcloud.cpp  Propointcloud.h  README.md  main.cpp
mydata/: Rect_images_right.xml~  extrinsics.yml~  phase_images.xml~  stereo_calib_images.xml~
mydata/input/: Rect_images_left.xml  Rect_images_left.xml~  Rect_images_right.xml  Rect_images_right.xml~  Rect_phase_images.xml~  phase_images.xml~  stereo_calib_images.xml  stereo_calib_images.xml~
mydata/input/model1/: Rect_images_left.xml  Rect_images_right.xml  Rect_phase_images.xml  stereo_calib_images.xml
mydata/input/model2/: Rect_images_left.xml~  Rect_images_right.xml~  Rect_phase_images.xml~  phase_images.xml~  stereo_calib_images.xml~
mydata/input/model2/Model21/: Rect_images_left.xml  Rect_images_right.xml  Rect_phase_images.xml  phase_images.xml
mydata/output/: extrinsics.yml  intrinsics.yml  mls_points.pcd  pnts3D.txt  pnts3D_pcd.pcd  series_phase_model1.txt
